<resources>
    <string name="app_name">Citra</string>
    <string name="title_activity_main" translatable="false">Citra</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="drawable_title" translatable="false">Citra</string>
    <string name="drawable_subtitle" translatable="false">Citra Emu</string>
    <string name="play">Play</string>
    <string name="icon">Icon</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9704087139792305/7806618673</string>

    <string name="logo" translatable="false">Logo</string>
    <string name="version" translatable="false">v.1.0.0.ALPHA</string>
    <string name="settings_region">Region:</string>
    <string name="menu_games">Games</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="button_l" translatable="false">L</string>
    <string name="button_r" translatable="false">R</string>
    <string name="button_home" translatable="false">Home</string>
    <string name="button_select" translatable="false">Select</string>
    <string name="button_start" translatable="false">Start</string>
    <string name="button_b" translatable="false">B</string>
    <string name="button_a" translatable="false">A</string>
    <string name="button_x" translatable="false">X</string>
    <string name="button_y" translatable="false">Y</string>
    <string name="button_up">Up</string>
    <string name="button_left">Left</string>
    <string name="button_right">Right</string>
    <string name="button_down">Down</string>
    <string name="button_d_pad_up">D-Pad Up</string>
    <string name="button_d_pad_left">D-Pad Left</string>
    <string name="button_d_pad_right">D-Pad Right</string>
    <string name="button_d_pad_down">D-Pad Down</string>
    <string name="button_touch">Touch</string>
    <string name="about_citra_description_part2">Citra only emulates a subset of 3DS hardware, and therefore is generally only useful for running/debugging homebrew applications. At this time, Citra is even able to boot several commercial games! Most of these do not run to a playable state, but we are working every day to advance the project forward.</string>
    <string name="about_citra_description_part1">Citra is an experimental open-source Nintendo 3DS emulator/debugger written in C++.</string>
    <string name="button_c_stick_up">C-Stick Up</string>
    <string name="button_c_stick_left">C-Stick Left</string>
    <string name="button_c_stick_right">C-Stick Right</string>
    <string name="button_c_stick_down">C-Stick Down</string>
    <string name="region_jpn" translatable="false">JPN</string>
    <string name="region_usa" translatable="false">USA</string>
    <string name="region_eur" translatable="false">EUR</string>
    <string name="region_aus" translatable="false">AUS</string>
    <string name="region_chn" translatable="false">CHN</string>
    <string name="region_kor" translatable="false">KOR</string>
    <string name="region_twn" translatable="false">TWN</string>
    
    <string-array name="region_array">
        <item>@string/region_jpn</item>
        <item>@string/region_usa</item>
        <item>@string/region_eur</item>
        <item>@string/region_aus</item>
        <item>@string/region_chn</item>
        <item>@string/region_kor</item>
        <item>@string/region_twn</item>
    </string-array>
</resources>
